# SLDPC

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
configs/backbones/: titan.yaml
configs/datasets/: data_io_config.yaml  tcga_nsclc.yaml  tcga_ot.yaml  tcga_rcc.yaml  ubc_ocean.yaml
data/datasets/tcga_nsclc/: TCGA-NSCLC.csv  TCGA-NSCLC_test.csv  TCGA-NSCLC_train.csv
data/datasets/tcga_ot/: tcga-ot_all.csv  tcga-ot_test.csv  tcga-ot_train.csv
data/datasets/tcga_rcc/: TCGA-RCC.csv  TCGA-RCC_test.csv  TCGA-RCC_train.csv
data/datasets/ubc_ocean/: UBC-OCEAN_all.csv  UBC-OCEAN_all_test.csv  UBC-OCEAN_all_train.csv
data/datasets/zero_shot_prompts/: tcga_nsclc.yaml  tcga_ot.yaml  tcga_rcc.yaml  ubc_ocean.yaml
scripts/: train_titan.py
sldpc/: __init__.py
sldpc/backbones/: __init__.py  registry.py
sldpc/backbones/titan/: __init__.py  model_wrapper.py  prompt_learner.py  text_encoding.py
sldpc/core/: __init__.py  fusion.py  losses.py  negative_sampler.py  prompt_learner_base.py
sldpc/data/: __init__.py  slide_feature_dataset.py
sldpc/trainers/: __init__.py  base_trainer.py  stage1_trainer.py  stage2_trainer.py  titan_pipeline.py
sldpc/utils/: __init__.py  metrics.py  run_logging.py  seed.py  zero_shot.py
