[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sldpc"
version = "0.1.0"
description = "SLDPC: Slide-Level Dual-Prompt Collaboration for Few-Shot WSI Classification"
readme = "README.md"
requires-python = ">=3.9,<3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Lulin Yuan" }
]
dependencies = []

[project.urls]
Homepage      = "https://github.com/linlu2022/SLDPC"
Repository    = "https://github.com/linlu2022/SLDPC"
"Bug Tracker" = "https://github.com/linlu2022/SLDPC/issues"
Paper         = "https://doi.org/10.1016/j.compmedimag.2026.102768"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["sldpc*"]
